<resources>
    <string name="app_name" translatable="false">Medicazelda</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="param_buttun">Bouton Paramètre</string>
    <string name="bienvenue_sur_medicalink">Bienvenue sur Medicazelda !</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="me_connecter">Me connecter</string>
    <string name="creer_mon_profil">Créer mon profil</string>
    <string name="changer_utilisateur">Changer d\'utilisateur</string>
    <string name="selectionner_un_profil">Sélectionner un profil</string>
    <string name="ajouter_un_profil">Ajouter un profil</string>
    <string name="medicalink_title" translatable="false">Medicazelda</string>
    <string name="creer_profil_votre_profil">Votre profil</string>
    <string name="creer_profil_adresse_email">Adresse Email</string>
    <string name="creer_profil_professionnel_de_sante">Professionnel de santé</string>
    <string name="creer_profil_informations_personnelles">Informations personnelles</string>
    <string name="bouton_creer_mon_profil">Créer mon profil</string>
    <string name="creer_profil_mot_de_passe">Mot de passe</string>
    <string name="creer_profil_nom">Nom</string>
    <string name="creer_profil_statut">Statut</string>
    <string name="creer_profil_rgpd">J\'accepte les conditions en matière de protection des données relatives au RGPD</string>
    <string name="creer_profil_prenom">Prénom</string>
    <string name="creer_profil_date_de_naissance">Date de naissance</string>
    <string name="dialog_dosage">Dosage</string>
    <string name="dialog_dosage_quantite">Quantité</string>
    <string name="dialog_annuler">Annuler</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_intervalle_regulier">Intervalle régulier</string>
    <string name="dialog_me_le_rappeler_avant">Me le rappeler avant</string>
    <string name="dialog_jours">jours</string>
    <string name="dialog_utiliser_votre_mot_de_passe">Utiliser votre mot de passe</string>
    <string name="dialog_mot_de_passe_incorrect">Mot de passe incorrect</string>
    <string name="dialog_mot_de_passe">Mot de passe</string>
...
    <string name="fin">Fin</string>
    <string name="duree_de_la_prise">Durée de la prise</string>
    <string name="sans_fin">Sans fin</string>
    <string name="date_de_debut">Date de début</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="date" translatable="false">Date</string>
    <string name="suivant">Suivant</string>
    <string name="intervalle">Intervalle</string>
    <string name="schema_de_prise_du_traitement">Schéma de prise du traitement</string>
    <string name="recapitulatif_du_traitement">Récapitulatif du traitement</string>
    <string name="confirmer">Confirmer</string>
    <string name="medicament">Médicament</string>
    <string name="nommedoc" translatable="false">NomMedoc</string>
...
    <string name="prises">Prises</string>
    <string name="reapprovisionnement">Réapprovisionnement</string>
    <string name="quotidiennement">Quotidiennement</string>
    <string name="quoti">quotidiennement</string>
    <string name="au_besoin">Au besoin</string>
    <string name="sch_ma_de_prise_du_ntraitement">Schéma de prise du  traitement</string>
    <string name="ajouter_une_nouvelle_prise">Ajouter une nouvelle prise</string>
    <string name="rechercher">Rechercher</string>
    <string name="ajouter_un_traitement">Ajouter un traitement</string>
    <string name="ajouter_quand_meme">Ajouter quand même</string>
    <string name="type_de_medicament">Type de médicament</string>
    <string name="rappel_reappriovisionnement">Rappel réappriovisionnement</string>
    <string name="stock_faible">Stock faible</string>
...
    <string name="jour">Jour</string>
    <string name="semaines">Semaines</string>
    <string name="tous_les">Tous les</string>
    <string name="toutes_les">Toutes les</string>
    <string name="toutes_2_semaines">Toutes les 2 Semaines</string>
    <string name="indetermine">Inderterminé</string>
    <string name="_17_00" translatable="false">17:00</string>
    <string name="meme_heure_meme_quanti">Même heure, même quantité</string>
    <string name="tous_les_3_jours_toutes_les_2_semaines">Ex : Tous les 3 jours, toutes les 2 semaines</string>
    <string name="pas_de_prise_regu">Pas de prise régulière</string>
    <string name="comprime">Comprimé</string>
    <string name="gellule">Gellule</string>
    <string name="sachet">Sachet</string>
...
    <string name="professionnel">Professionnel</string>
    <string name="creer_profil_utilisateur">Utilisateur</string>
    <string name="rapport_journalier">Rapport journalier :</string>
    <string name="x_x" translatable="false">X/X</string>
    <string name="chargement">Chargement</string>
    <string name="dark_mode">Mode sombre</string>
    <string name="ajouter">Ajouter</string>
    <string name="supprimer_compte">Supprimer le compte</string>
    <string name="vos_contacts">Vos contacts</string>
    <string name="prenom_message_item">Prénom</string>
    <string name="nom_message_item">Nom</string>
    <string name="rpps_message_item" translatable="false">RPPS</string>
    <string name="rechercher_par_prenom_et_nom">Rechercher par prénom et nom</string>
...
