<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_ajout_shema_prise_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.traitements.ajouts.AjoutManuelSearchFragment">

    <TextView
        android:id="@+id/textView9"
...
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/suivant1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"

        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_darker_blue_button_no_stroke_background"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/retour_schema_prise2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_nouvelle_prise"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_white_button_light_blue_stroke_background"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:srcCompat="@drawable/annuler"
        app:tint="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAjoutPrise"
        android:layout_width="359dp"
        android:layout_height="375dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/suivant1"
        app:layout_constraintEnd_toEndOf="@+id/retour_schema_prise2"
...
